# time_range_parser

./: .env  .env.example  .env.prod  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FUTURETASKS.md  GIT.md  LICENSE  MAKE.cmd  Makefile  README.md  STATEMENTS.md  TECHNICAL.md  dd.md  ddd.md  docker-compose.prod.yml  docker-compose.yml  mcp_client_httpx.py  mcp_client_request.py  pyproject.toml  re.md  release.sh  results.md  server_main.py  text_to_sql_example.py
docs/: DOCKER.md  PARSER_REFERENCE.md  TECHNICAL.md
examples/: mcp_client_httpx.py  mcp_client_request.py  mcp_sse_client.py  text_to_sql_example.py
scripts/: bootstrap.sh
src/date_textparser/: __init__.py  core.py  patterns.py  result.py  vocabulary.py  vocabulary.py.bak
src/date_textparser/parsers/: __init__.py  base.py  holidays.py  periods.py  relative.py  vague.py  weekdays.py
src/lib/: external_time.py  mcp_sse_client.py
tests/: conftest.py  test_coverage_gaps.py  test_duration.py  test_error_handling.py  test_external_time.py  test_holidays.py  test_now_iso.py  test_parameterized.py  test_quarters_and_past_periods.py  test_recurrence.py  test_server_tools.py  test_time_range_parser.py  test_timezone_conversion.py  test_vague_and_periods.py
